infra/kubernetes/overlays/prod/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: prod
spec:
  parentRefs:
  - name: gateway
    namespace: default
    sectionName: https-prod
  hostnames:
  - "condensation.corentindupaigne.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /login
    backendRefs:
    - name: auth-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /register
    backendRefs:
    - name: auth-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /oauth
    backendRefs:
    - name: auth-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    backendRefs:
    - name: auth-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-svc
      port: 3000
